# ranger_librarian_helpers

./: .gitignore  CMakeLists.txt  README.md  minimal_ocr.cpp  package.xml  video_ocr.cpp
action/: LabelReading.action
include/: labelreader.h~  utils.cpp~  utils.h
launch/: librarian.launch  ranger_mapping.launch  ranger_nav.launch  rtab_slam.launch
launch/include/: map_control.launch  move_base.launch
launch/include/nav_param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
msg/: NavigatorAction.msg  WeightFiltered.msg
scripts/: keyboard_talker.py  mapper.py  mapper_control.py  navigator_librarian.py
src/: depth_below_timer.cpp  depth_below_timer_node.cpp  label_reader.cpp  label_reader.h  label_reader_server.cpp  labelreader.h~  laberreader.cpp~  main.cpp  ranger_librarian.cpp  ranger_librarian.h  utils.cpp~  weight_change_monitor.cpp
