<package>
  <name>ranger_librarian</name>
  <version>0.0.0</version>
  <description>
      Package dedicated for controlling ranger box as a book collector
  </description>
  <maintainer email="donatas.kozlovskis@epfl.ch">Donatas Kozlovskis</maintainer>
  <license>BSD</license>

  <author>Donatas Kozlovskis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>


</package>
